[package]
name = "flaky-finder"
version = "0.2.1"
authors = ["dymayday <dymayday@gmail.com>"]
description = "CLI tool meant to find flaky test by running multiple times a test harness until it fails."
documentation = "https://github.com/dymayday/flaky-finder"
homepage = "https://github.com/dymayday/flaky-finder"
repository = "https://github.com/dymayday/flaky-finder"
keywords = ["flaky", "test", "cli"]
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
indicatif = "0.12.0"
crossbeam-channel = "0.3.9"
